# modern-opengl-experiment

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
OpenGL/include/glad/: glad.h
OpenGL/src/: glad.c
